<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Disaster Looms! Event Generator</string>
    <string name="app_version">Version 1.00.000</string>
    <string name="app_shortname">DL! EventGenerator</string>
    <string name="menu_random">Random</string>
    <string name="new_event">New Event</string>
    <string name="tile_name">&lt;EventName&gt;</string>
    <string name="tile_content">&lt;Content&gt;</string>
    <string name="tile_description">game tile with a name and content</string>
    <string name="main_random_event">Random Event</string>
    <string name="main_all_events">All Events</string>
    <string name="main_scoring">Scoring</string>
    <string name="main_settings">Settings</string>
   
</resources>